welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: not found: value nombreoccurences
  for (i<- 0 to num-1){T(i)=nombre;occurences=occurences+1; if (occurences==nombreoccurences){occurences=0;nombre = a_prendre;a_prendre = a_prendre+1; nombreoccurence = T(a_prendre+1)}}
                                                                            ^golomb:8: error: not found: value nombreoccurence
  for (i<- 0 to num-1){T(i)=nombre;occurences=occurences+1; if (occurences==nombreoccurences){occurences=0;nombre = a_prendre;a_prendre = a_prendre+1; nombreoccurence = T(a_prendre+1)}}
                                                                                                                                                       ^